@@ -149,6 +149,7 @@ Trunk (unreleased changes)
    HADOOP-2688 IllegalArgumentException processing a shutdown stops
                server going down and results in millions of lines of output
    HADOOP-2706 HBase Shell crash
+   HADOOP-2712 under load, regions won't split
    
   IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
